--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -39,23 +39,23 @@
 
         <p>Here's our list of deals on various courses, tools, and books that you may want to check out:</p>
 
-        <p><strong><a href="https://nodecli.com">Node CLI Automation Course</a> [$99 - <em>was $249</em>]</strong></p>
+        <h3><strong><a href="https://nodecli.com">Node CLI Automation Course</a> [$99 - <em>was $249</em>]</strong></h3>
 
           <img src="https://superhighway.dev/images/v1606400455/o6jdedlrzlsctyghiwmy.png" style="width:100%; " />
 
         <p>This step-by-step course from Ahmad Awais covers how to build both Node.js and JavaScript based CLI apps, DevTools, and npm packages for automation purposes (saving you time). It features over 100 videos, 21 example projects, access to a private Discord, and you'll get lifetime updates to any future course changes.</p>
 
-        <p><strong><a href="https://flaviocopes.com/blackfriday/">Courses from Flavio Copes</a> [$49]</strong></p>
+        <h3><strong><a href="https://flaviocopes.com/blackfriday/">Courses from Flavio Copes</a> [$49]</strong></h3>
 
           <img src="https://superhighway.dev/images/v1606400840/xldjwgr3oc5ik3m6asko.png" style="width:100%; " />
 
         <p>All of Flavio's courses are on offer this week. The author/developer has courses on a variety of subjects, including React, Vue, Next.js, Svelte, and more. You can also grab all the courses in a bundle if you're feeling particularly scholarly.</p>
 
-        <p><strong><a href="https://jamstackhandbook.com">Jamstack Handbook from Colby Fayock</a> [$5 - <em>was $10</em>]</strong></p>
+        <h3><strong><a href="https://jamstackhandbook.com">Jamstack Handbook from Colby Fayock</a> [$5 - <em>was $10</em>]</strong></h3>
 
-        <img src="https://superhighway.dev/images/v1606401736/gkmywwk1ezxtgpo6qngr.png" style="float:right; height: 180px; margin: 20px 0px 20px 40px; " />
+        <img src="https://superhighway.dev/images/v1606401736/gkmywwk1ezxtgpo6qngr.png" style="float:right; height: 180px; margin: 0px 0px 20px 40px; " />
 
-        <p>If you're even a tiny bit curious about Jamstack, then this ebook from Colby Fayock explains what the fuss is all about. The handbook shows how to build fast, dynamic apps with JavaScript and the static web.</p> 
+        <p>If you're even a tiny bit curious about Jamstack, then this ebook from Colby Fayock explains what the fuss is all about.</p><p>The handbook shows how to build fast, dynamic apps with JavaScript and the static web.</p>
 
         <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Find out more about <a href="https://trailblazer.to/2.1/">Trailblazer on its website</a> and you can learn more about <a href="https://twitter.com/apotonick">Nick on Twitter</a>.</em>.</p>
 
