--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -57,6 +57,10 @@
 
         <p>If you're even a tiny bit curious about Jamstack, then this ebook from Colby Fayock explains what the fuss is all about.</p><p>The handbook shows how to build fast, dynamic apps with JavaScript and the static web.</p>
 
+        <h3><strong><a href="https://wesbos.com/courses">Courses from Wes Bos</a> [$69 — <em>was $139</em>]</strong></h3>
+
+        <p>Wes is something of a course machine, over the past few years he's dropped several high quality video courses, covering things such as Gatsby, ES6, Redux and more. For Black Friday all his courses are half price, plus <a href="https://en.wikipedia.org/wiki/Purchasing_power_parity">purchasing power parity</a> means you may get them cheaper still.</p>
+
         <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Find out more about <a href="https://trailblazer.to/2.1/">Trailblazer on its website</a> and you can learn more about <a href="https://twitter.com/apotonick">Nick on Twitter</a>.</em>.</p>
 
         <hr class="article_end">
