--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -53,15 +53,17 @@
 
         <h3><strong><a href="https://jamstackhandbook.com">Jamstack Handbook from Colby Fayock</a> [$5 - <em>was $10</em>]</strong></h3>
 
-        <img src="https://superhighway.dev/images/v1606401736/gkmywwk1ezxtgpo6qngr.png" style="float:right; height: 180px; margin: 0px 0px 20px 40px; " />
+        <img src="https://superhighway.dev/images/v1606401736/gkmywwk1ezxtgpo6qngr.png" style="float:right; height: 150px; margin: 0px 0px 20px 40px; " />
 
         <p>If you're even a tiny bit curious about Jamstack, then this ebook from Colby Fayock explains what the fuss is all about.</p><p>The handbook shows how to build fast, dynamic apps with JavaScript and the static web.</p>
 
         <h3><strong><a href="https://wesbos.com/courses">Courses from Wes Bos</a> [$69 — <em>was $139</em>]</strong></h3>
 
-        <p>Wes is something of a course machine, over the past few years he's dropped several high quality video courses, covering things such as Gatsby, ES6, Redux and more. For Black Friday all his courses are half price, plus <a href="https://en.wikipedia.org/wiki/Purchasing_power_parity">purchasing power parity</a> means you may get them cheaper still.</p>
+        <p>Wes is something of a course machine, over the past few years he's dropped several high quality video courses, covering things such as Gatsby, ES6, Redux and more.</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Find out more about <a href="https://trailblazer.to/2.1/">Trailblazer on its website</a> and you can learn more about <a href="https://twitter.com/apotonick">Nick on Twitter</a>.</em>.</p>
+        <p>For Black Friday all his courses are half price, plus <a href="https://en.wikipedia.org/wiki/Purchasing_power_parity">purchasing power parity</a> means you may get them cheaper still.</p>
+
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Have you found a great deal worth sharing? Drop a comment on <a href="https://twitter.com/JavaScriptDaily/status/1331967953957494784">this Twitter thread</a>.</em>.</p>
 
         <hr class="article_end">
 
