--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -39,17 +39,17 @@
 
         <p>Here's our list of deals on various courses, tools, and books that you may want to check out:</p>
 
+        <h3><strong><a href="https://wesbos.com/courses">Courses from Wes Bos</a> [$69 — <em>was $139</em>]</strong></h3>
+
+        <p>Wes is something of a course machine, over the past few years he's dropped several high quality video courses, covering things such as Gatsby, ES6, Redux and more.</p>
+
+        <p>For Black Friday all his courses are half price, plus <a href="https://en.wikipedia.org/wiki/Purchasing_power_parity">purchasing power parity</a> means you may get them cheaper still.</p>
+
         <h3><strong><a href="https://nodecli.com">Node CLI Automation Course</a> [$99 - <em>was $249</em>]</strong></h3>
 
           <img src="https://superhighway.dev/images/v1606400455/o6jdedlrzlsctyghiwmy.png" style="width:100%; " />
 
         <p>This step-by-step course from Ahmad Awais covers how to build both Node.js and JavaScript based CLI apps, DevTools, and npm packages for automation purposes (saving you time). It features over 100 videos, 21 example projects, access to a private Discord, and you'll get lifetime updates to any future course changes.</p>
-
-        <h3><strong><a href="https://flaviocopes.com/blackfriday/">Courses from Flavio Copes</a> [$49]</strong></h3>
-
-          <img src="https://superhighway.dev/images/v1606400840/xldjwgr3oc5ik3m6asko.png" style="width:100%; " />
-
-        <p>All of Flavio's courses are on offer this week. The author/developer has courses on a variety of subjects, including React, Vue, Next.js, Svelte, and more. You can also grab all the courses in a bundle if you're feeling particularly scholarly.</p>
 
         <h3><strong><a href="https://jamstackhandbook.com">Jamstack Handbook from Colby Fayock</a> [$5 - <em>was $10</em>]</strong></h3>
 
@@ -57,11 +57,19 @@
 
         <p>If you're even a tiny bit curious about Jamstack, then this ebook from Colby Fayock explains what the fuss is all about.</p><p>The handbook shows how to build fast, dynamic apps with JavaScript and the static web.</p>
 
-        <h3><strong><a href="https://wesbos.com/courses">Courses from Wes Bos</a> [$69 — <em>was $139</em>]</strong></h3>
+        <h3><strong><a href="https://flaviocopes.com/blackfriday/">Courses from Flavio Copes</a> [$49]</strong></h3>
 
-        <p>Wes is something of a course machine, over the past few years he's dropped several high quality video courses, covering things such as Gatsby, ES6, Redux and more.</p>
+          <img src="https://superhighway.dev/images/v1606400840/xldjwgr3oc5ik3m6asko.png" style="width:100%; " />
 
-        <p>For Black Friday all his courses are half price, plus <a href="https://en.wikipedia.org/wiki/Purchasing_power_parity">purchasing power parity</a> means you may get them cheaper still.</p>
+        <p>All of Flavio's courses are on offer this week. The author/developer has courses on a variety of subjects, including React, Vue, Next.js, Svelte, and more. You can also grab all the courses in a bundle if you're feeling particularly scholarly.</p>
+
+        <h3><strong><a href="https://learnetto.com/blackfriday">Learnetto Courses and Books</a> [$399 — <em>a 70% discount</em>]</strong></h3>
+
+        <p>This next deal combines a <em>ton</em> of courses and books into one complete pack. It's a bundling of several notable resources from respected experts, covering topics such as Tailwind, Serverless, VS Code, and more.</p>
+
+        <p>CEO of Lernetto Hrishi Mittal <a ref="https://twitter.com/hrishio/status/1331965777751265283">explains why you may want to pick up this deal in this Twitter thread</a>.</p>
+
+        https://twitter.com/peterc/status/1332007441945538561?s=21
 
         <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Have you found a great deal worth sharing? Drop a comment on <a href="https://twitter.com/JavaScriptDaily/status/1331967953957494784">this Twitter thread</a>.</em>.</p>
 
