--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -65,7 +65,7 @@
 
         <h3><strong><a href="https://learnetto.com/blackfriday">Learnetto Courses and Books</a> [$399 — <em>a 70% discount</em>]</strong></h3>
 
-        <p>This next deal combines a <em>ton</em> of courses and books into one complete pack. It's a bundling of several notable resources from respected experts, covering topics such as Tailwind, Serverless, VS Code, and more.</p>
+        <p>This next deal combines a <em>ton</em> of courses and books into one complete pack. It's a bundling of several notable resources from respected experts, covering various frontend and backend topics such as Tailwind CSS, GraphQL, Serverless, VSCode, and more.</p>
 
         <p>CEO of Lernetto Hrishi Mittal <a ref="https://twitter.com/hrishio/status/1331965777751265283">explains why you may want to pick up this deal in this Twitter thread</a>.</p>
 
