Updated Black Friday Deals post.

--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -45,6 +45,14 @@
 
         <p>For Black Friday all his courses are half price, plus <a href="https://en.wikipedia.org/wiki/Purchasing_power_parity">purchasing power parity</a> means you may get them cheaper still.</p>
 
+        <h3><strong><a href="https://nostarch.com/ejs3">Eloquent JavaScript</a> [33.7% Off]</strong></h3>
+
+        <img src="https://superhighway.dev/images/v1606411279/j1est5kjbk421elzbtdt.png" style="float:right; height: 150px; margin: 0px 0px 20px 40px; " />
+
+        <p>'A Modern Introduction to Programming' by Marijn Haverbeke is just one of the excellent books available over at <a href="https://nostarch.com">No Starch Press</a>.</p>
+
+        <p>They've an extensive range of printed titles covering programmings, hacking, sys admin, and more _ well worth a look. Use the code <code>BLACKFRIDAY20</code> for a discount.</p>
+
         <h3><strong><a href="https://nodecli.com">Node CLI Automation Course</a> [$99 - <em>was $249</em>]</strong></h3>
 
           <img src="https://superhighway.dev/images/v1606400455/o6jdedlrzlsctyghiwmy.png" style="width:100%; " />
@@ -69,9 +77,9 @@
 
         <p>CEO of Lernetto Hrishi Mittal <a ref="https://twitter.com/hrishio/status/1331965777751265283">explains why you may want to pick up this deal in this Twitter thread</a>.</p>
 
-        
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Have you found a great deal worth sharing? Drop a comment on <a href="https://twitter.com/JavaScriptDaily/status/1331967953957494784">this Twitter thread</a>.</em>.</p>
+
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Have you found a great deal worth sharing? Drop a comment on <a href="https://twitter.com/JavaScriptDaily/status/1331967953957494784">this Twitter thread</a></em>.</p>
 
         <hr class="article_end">
 
