--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -51,7 +51,7 @@
 
         <p>'A Modern Introduction to Programming' by Marijn Haverbeke is just one of the excellent books available over at <a href="https://nostarch.com">No Starch Press</a>.</p>
 
-        <p>They've an extensive range of printed titles covering programmings, hacking, sys admin, and more _ well worth a look. Use the code <code>BLACKFRIDAY20</code> for a discount.</p>
+        <p>They've an extensive range of printed titles covering programming, hacking, sys admin, and more _ well worth a look. Use the code <code>BLACKFRIDAY20</code> for a discount.</p>
 
         <h3><strong><a href="https://nodecli.com">Node CLI Automation Course</a> [$99 - <em>was $249</em>]</strong></h3>
 
@@ -76,6 +76,13 @@
         <p>This next deal combines a <em>ton</em> of courses and books into one complete pack. It's a bundling of several notable resources from respected experts, covering various frontend and backend topics such as Tailwind CSS, GraphQL, Serverless, VSCode, and more.</p>
 
         <p>CEO of Lernetto Hrishi Mittal <a ref="https://twitter.com/hrishio/status/1331965777751265283">explains why you may want to pick up this deal in this Twitter thread</a>.</p>
+
+        <h3>Other deals of note:</h3>
+
+        <ul>
+          <li><a href="https://www.pluralsight.com/offer/2020/bf-cm-40-off">Pluralsight subscriptions</a> are 40% off.</li>
+          <li>Todd Motto's <a href="https://ultimatecourses.com">Ultimate Courses also have a 40% discount</a> for Black Friday.</li>
+        </ul>
 
 
 
