--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -80,11 +80,10 @@
         <h3>Other deals of note:</h3>
 
         <ul>
+          <li>Michaela Greiler is offering <a href="https://www.michaelagreiler.com/workshops/">45% off code review workshops</a>.</li>
           <li><a href="https://www.pluralsight.com/offer/2020/bf-cm-40-off">Pluralsight subscriptions</a> are 40% off.</li>
           <li>Todd Motto's <a href="https://ultimatecourses.com">Ultimate Courses also have a 40% discount</a> for Black Friday.</li>
         </ul>
-
-
 
         <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Have you found a great deal worth sharing? Drop a comment on <a href="https://twitter.com/JavaScriptDaily/status/1331967953957494784">this Twitter thread</a></em>.</p>
 
