Added Wallaby.js deal.

--- a/site/black-friday-developer-deals-2020.html
+++ b/site/black-friday-developer-deals-2020.html
@@ -81,6 +81,7 @@
 
         <ul>
           <li>Michaela Greiler is offering <a href="https://www.michaelagreiler.com/workshops/">45% off code review workshops</a>.</li>
+          <li>Testing tool <a href="https://wallabyjs.com/store/personal/">Wallaby.js is available at a discount</a>, starting at 25% off.</li>
           <li><a href="https://www.pluralsight.com/offer/2020/bf-cm-40-off">Pluralsight subscriptions</a> are 40% off.</li>
           <li>Todd Motto's <a href="https://ultimatecourses.com">Ultimate Courses also have a 40% discount</a> for Black Friday.</li>
         </ul>
