--- a/site/black-friday-developer-things-2020.html
+++ b/site/black-friday-developer-things-2020.html
@@ -7,10 +7,10 @@
   <link rel="icon" href="/favicon.ico"/>
 
   <!-- Things to change -->
-  <title>Black Friday deals for developers</title>
+  <title>2020 Black Friday deals for JavaScript developers</title>
   <meta name="description" content="We've found the best deals for programmers and developers this Black Friday." />
   <meta property="og:description" content="We've found the best deals for programmers and developers this Black Friday." />
-  <meta property="og:title" content="The best Black Friday 2020 deals for developers" />
+  <meta property="og:title" content="The best Black Friday 2020 deals for JavaScript developers" />
   <meta property="og:image" content="https://superhighway.dev/images/v1606400364/ls8wslapaknbphf0wyyl.jpg" />
   <meta property="og:url" content="https://superhighway.dev/black-friday-developer-deals-2020" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
@@ -26,18 +26,46 @@
     <article>
       <header>
         <div class="sub">🔥 Decent discounts</div>
-        <h1>Black Friday deals for developers</h1>
+        <h1>Black Friday deals for JavaScript&nbsp;developers</h1>
         <h2>Offers on courses, books, tools and more.</h2>
-        <p class="byline">by <a href="https://twitter.com/chrisbrandrick">Chris Brandrick</a>&nbsp;&nbsp;|&nbsp;&nbsp;November 26, 2020</p>
+        <p class="byline">by <a href="https://twitter.com/chrisbrandrick">Chris Brandrick</a> and <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&nbsp;|&nbsp;&nbsp;November 27, 2020</p>
       </header>
 
       <div class="content">
 
+        <p style="font-size: 0.8em; line-height: 1.3em"><em>Note: We do not receive any commission for these links. We've just collected deals together here because we didn't want to clutter up <a href="https://javascriptweekly.com/">JavaScript Weekly</a> today! :-)</a> We found these deals via <a href="https://twitter.com/JavaScriptDaily/status/1331967953957494784">this open call</a> and by searching for&nbsp;ourselves.</a></em></p>
+
         <img src="https://superhighway.dev/images/v1606400364/ls8wslapaknbphf0wyyl.jpg" style="width:100%; margin: 20px 0px; ">
 
-        <p>The annual shopping bonanza that Black Friday has seemingly become isn't all just getting new socks, and cheap Amazon Echo devices — we've found a handful of great deals aimed solely at developers.</p>
+        <p>The annual shopping bonanza that Black Friday has seemingly become isn't all just getting new socks or half price Amazon Echos &mdash; we've found a variety of offers aimed at JavaScript developers too.</p>
 
-        <p>Here's our list of deals on various courses, tools, and books that you may want to check out:</p>
+        <p>Please note that we're not responsible if someone changes their prices or pulls an offer early, so check before you buy anything. But with that said, here's our list of deals on various courses, tools, and books that you may want to check out:</p>
+
+<hr/>
+
+        <h3><strong><a href="https://nostarch.com/ejs3">Eloquent JavaScript</a> <em>(and others)</em> [33.7% Off]</strong></h3>
+
+        <img src="https://superhighway.dev/images/v1606411279/j1est5kjbk421elzbtdt.png" style="float:right; height: 150px; margin: 0px 0px 20px 40px; " />
+
+        <p>'A Modern Introduction to Programming' by Marijn Haverbeke is just one of the excellent books available over at <a href="https://nostarch.com">No Starch Press</a>.</p>
+
+        <p>They've an extensive range of printed titles covering programming, hacking, sys admin, and more – well worth a look. Use the code <code>BLACKFRIDAY20</code> for a discount. This applies to No Starch's books generally, by the way, and they have lots of fantastic ones worth browsing.. I have rather too many in my own collection.</p>
+
+        <p><a href="https://pragprog.com/">Pragmatic Bookshelf</a> has a 40% off sale as well with code <code>turkeysale2020</code> which you can use on anything, including their many <a href="https://pragprog.com/search/?q=javascript">JavaScript titles.</a></p>
+
+       
+
+        <hr/>
+
+        <h3><strong><a href="https://learnetto.com/blackfriday?utm_source=superhighway&utm_medium=web&utm_campaign=bf2020">The Learnetto Full Stack Bundle</a> [$399 — <em>a 70% discount</em>]</strong></h3>
+
+        <p>This next deal combines a <em>ton</em> of courses and books into one complete pack. It's a bundling of several notable resources from respected experts, covering various frontend and backend topics such as React, Tailwind CSS, GraphQL, Serverless, VSCode, and more.</p>
+
+        <p>CEO of Lernetto Hrishi Mittal <a ref="https://twitter.com/hrishio/status/1331965777751265283">explains why you may want to pick up this deal in this Twitter thread</a>.</p>
+
+
+
+        <hr/>
 
         <h3><strong><a href="https://wesbos.com/courses">Courses from Wes Bos</a> [$69 — <em>was $139</em>]</strong></h3>
 
@@ -45,13 +73,7 @@
 
         <p>For Black Friday all his courses are half price, plus <a href="https://en.wikipedia.org/wiki/Purchasing_power_parity">purchasing power parity</a> means you may get them cheaper still.</p>
 
-        <h3><strong><a href="https://nostarch.com/ejs3">Eloquent JavaScript</a> [33.7% Off]</strong></h3>
-
-        <img src="https://superhighway.dev/images/v1606411279/j1est5kjbk421elzbtdt.png" style="float:right; height: 150px; margin: 0px 0px 20px 40px; " />
-
-        <p>'A Modern Introduction to Programming' by Marijn Haverbeke is just one of the excellent books available over at <a href="https://nostarch.com">No Starch Press</a>.</p>
-
-        <p>They've an extensive range of printed titles covering programming, hacking, sys admin, and more _ well worth a look. Use the code <code>BLACKFRIDAY20</code> for a discount.</p>
+        <hr/>
 
         <h3><strong><a href="https://nodecli.com">Node CLI Automation Course</a> [$99 - <em>was $249</em>]</strong></h3>
 
@@ -59,11 +81,22 @@
 
         <p>This step-by-step course from Ahmad Awais covers how to build both Node.js and JavaScript based CLI apps, DevTools, and npm packages for automation purposes (saving you time). It features over 100 videos, 21 example projects, access to a private Discord, and you'll get lifetime updates to any future course changes.</p>
 
+        <hr/>
+
         <h3><strong><a href="https://jamstackhandbook.com">Jamstack Handbook from Colby Fayock</a> [$5 - <em>was $10</em>]</strong></h3>
 
         <img src="https://superhighway.dev/images/v1606401736/gkmywwk1ezxtgpo6qngr.png" style="float:right; height: 150px; margin: 0px 0px 20px 40px; " />
 
         <p>If you're even a tiny bit curious about Jamstack, then this ebook from Colby Fayock explains what the fuss is all about.</p><p>The handbook shows how to build fast, dynamic apps with JavaScript and the static web.</p>
+
+        <hr/>
+
+        <h3><strong><a href="https://vueschool.io/sales/blackfriday">Vue School</a> [40% off - annual plan is now $114]</strong></h3>
+
+        <p>With 364 video lessons over 26 courses, you could watch a video almost every day of the year! If Vue is on your radar, we've heard good things about this collection.</p>
+
+
+        <hr/>
 
         <h3><strong><a href="https://flaviocopes.com/blackfriday/">Courses from Flavio Copes</a> [$49]</strong></h3>
 
@@ -71,19 +104,20 @@
 
         <p>All of Flavio's courses are on offer this week. The author/developer has courses on a variety of subjects, including React, Vue, Next.js, Svelte, and more. You can also grab all the courses in a bundle if you're feeling particularly scholarly.</p>
 
-        <h3><strong><a href="https://learnetto.com/blackfriday">Learnetto Courses and Books</a> [$399 — <em>a 70% discount</em>]</strong></h3>
-
-        <p>This next deal combines a <em>ton</em> of courses and books into one complete pack. It's a bundling of several notable resources from respected experts, covering various frontend and backend topics such as Tailwind CSS, GraphQL, Serverless, VSCode, and more.</p>
-
-        <p>CEO of Lernetto Hrishi Mittal <a ref="https://twitter.com/hrishio/status/1331965777751265283">explains why you may want to pick up this deal in this Twitter thread</a>.</p>
 
         <h3>Other deals of note:</h3>
 
         <ul>
+          <li>Tyler McGinnis and crew are offering <a href="https://ui.dev/blackfriday/">25% off on their UI.dev membership</a> which gives access to all of their courses (covering things like TypeScript, Redux and React) and other benefits.</li>
           <li>Michaela Greiler is offering <a href="https://www.michaelagreiler.com/workshops/">45% off code review workshops</a>.</li>
           <li>Testing tool <a href="https://wallabyjs.com/store/personal/">Wallaby.js is available at a discount</a>, starting at 25% off.</li>
           <li><a href="https://www.pluralsight.com/offer/2020/bf-cm-40-off">Pluralsight subscriptions</a> are 40% off.</li>
           <li>Todd Motto's <a href="https://ultimatecourses.com">Ultimate Courses also have a 40% discount</a> for Black Friday.</li>
+          <li>Checkly is a API and E2E monitoring tool offering <a href="https://twitter.com/tim_nolet/status/1332016327993815041">35% off any plan for 12 months.</a></li>
+          <li><em>Pricing Freelance Projects</em> is <a href="https://gumroad.com/l/pcUlz/BF2020">half off</a>, today only.</li>
+          <li>An <a href="https://apidocsfordevs.com/">API documentation course</a> is offering 40% off till the end of the month.</li>
+          <li>Chris Ferdinandi has 40% off on all his <a href="https://vanillajsguides.com/"></a>Vanilla JavaScript Pocket Guides.</a> Plus "free bonus gifts!" </li>
+          <li><a href="https://masteringnuxt.com/">Mastering Nuxt</a> is 35% off till the end of the month.</li>
         </ul>
 
         <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>Have you found a great deal worth sharing? Drop a comment on <a href="https://twitter.com/JavaScriptDaily/status/1331967953957494784">this Twitter thread</a></em>.</p>
