--- a/site/black-friday-developer-things-2020.html
+++ b/site/black-friday-developer-things-2020.html
@@ -116,7 +116,7 @@
           <li>Checkly is a API and E2E monitoring tool offering <a href="https://twitter.com/tim_nolet/status/1332016327993815041">35% off any plan for 12 months.</a></li>
           <li><em>Pricing Freelance Projects</em> is <a href="https://gumroad.com/l/pcUlz/BF2020">half off</a>, today only.</li>
           <li>An <a href="https://apidocsfordevs.com/">API documentation course</a> is offering 40% off till the end of the month.</li>
-          <li>Chris Ferdinandi has 40% off on all his <a href="https://vanillajsguides.com/"></a>Vanilla JavaScript Pocket Guides.</a> Plus "free bonus gifts!" </li>
+          <li>Chris Ferdinandi has 40% off on all his <a href="https://vanillajsguides.com/">Vanilla JavaScript Pocket Guides.</a> Plus "free bonus gifts!" </li>
           <li><a href="https://masteringnuxt.com/">Mastering Nuxt</a> is 35% off till the end of the month.</li>
         </ul>
 
