--- a/site/black-friday-developer-things-2020.html
+++ b/site/black-friday-developer-things-2020.html
@@ -12,7 +12,7 @@
   <meta property="og:description" content="We've found the best deals for programmers and developers this Black Friday." />
   <meta property="og:title" content="The best Black Friday 2020 deals for JavaScript developers" />
   <meta property="og:image" content="https://superhighway.dev/images/v1606400364/ls8wslapaknbphf0wyyl.jpg" />
-  <meta property="og:url" content="https://superhighway.dev/black-friday-developer-deals-2020" />
+  <meta property="og:url" content="https://superhighway.dev/black-friday-developer-things-2020" />
   <meta name="twitter:site" content="@SUPERHlGHWAY" />
 
   <!-- Things that can stay fixed -->
@@ -63,6 +63,11 @@
 
         <p>CEO of Lernetto Hrishi Mittal <a ref="https://twitter.com/hrishio/status/1331965777751265283">explains why you may want to pick up this deal in this Twitter thread</a>.</p>
 
+        <hr />
+
+        <h3><strong><a href="https://opinionatedreact.com/">The Opinionated Guide to React</a> [30% off]</strong></h3>
+
+        <p>A late addition! :-)</p>
 
 
         <hr/>
