--- a/site/black-friday-developer-things-2020.html
+++ b/site/black-friday-developer-things-2020.html
@@ -67,7 +67,9 @@
 
         <h3><strong><a href="https://opinionatedreact.com/">The Opinionated Guide to React</a> [30% off]</strong></h3>
 
-        <p>A late addition! :-) Sara Vieira is a developer at CodeSandbox and <em>The Opinionated Guide to React</em> is 200 pages of 'React recipes' and examples to get you up to speed with Sara's React approach to React quickly.</p>
+        <p><a href="https://twitter.com/NikkitaFTW/status/1332396357638828032">A late addition!</a> :-) Sara Vieira is a developer at CodeSandbox and <em>The Opinionated Guide to React</em> is 200 pages of 'React recipes' and examples to get you up to speed with Sara's React approach to React quickly.</p>
+
+        <p>Important: You need to use the code <code>DiscountDayOfTheYear</code> at checkout!</p>
 
         <hr/>
 
