--- a/site/black-friday-developer-things-2020.html
+++ b/site/black-friday-developer-things-2020.html
@@ -61,7 +61,7 @@
 
         <p>This next deal combines a <em>ton</em> of courses and books into one complete pack. It's a bundling of several notable resources from respected experts, covering various frontend and backend topics such as React, Tailwind CSS, GraphQL, Serverless, VSCode, and more.</p>
 
-        <p>CEO of Lernetto Hrishi Mittal <a ref="https://twitter.com/hrishio/status/1331965777751265283">explains why you may want to pick up this deal in this Twitter thread</a>.</p>
+        <p>CEO of Lernetto Hrishi Mittal <a href="https://twitter.com/hrishio/status/1331965777751265283">explains why you may want to pick up this deal in this Twitter thread</a>.</p>
 
         <hr />
 
