--- a/site/javascript-25-years-1995.html
+++ b/site/javascript-25-years-1995.html
@@ -57,83 +57,83 @@
 
         <hr class="article_end">
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“JavaScript is an exciting technology because it represents the next generation of software designed specifically for the Internet. Hewlett-Packard is committed to open standards and is a supporter of JavaScript because it complements Hewlett-Packard’s open systems architecture.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“JavaScript is an exciting technology because it represents the next generation of software designed specifically for the Internet. Hewlett-Packard is committed to open standards and is a supporter of JavaScript because it complements Hewlett-Packard’s open systems architecture.”</em><br><br>
         Jan Silverman, Director<br>
         Hewlett-Packard</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“JavaScript is a great way to get cross-platform scriptable access to databases and move the resulting data into Macromedia Shockwave, where it can be rendered, animated and made into live interactive multimedia for the Internet. JavaScript is also a promising core technology for the new multimedia publishing tool that Macromedia is building.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“JavaScript is a great way to get cross-platform scriptable access to databases and move the resulting data into Macromedia Shockwave, where it can be rendered, animated and made into live interactive multimedia for the Internet. JavaScript is also a promising core technology for the new multimedia publishing tool that Macromedia is building.”</em><br><br>
         Bud Colligan, President and CEO<br>
         Macromedia</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“JavaScript brings the power of rapid multimedia application development with cross-platform mobility at both the operating system and architecture level. We are pleased to integrate this powerful language into our Developer’s Program.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“JavaScript brings the power of rapid multimedia application development with cross-platform mobility at both the operating system and architecture level. We are pleased to integrate this powerful language into our Developer’s Program.”</em><br><br>
         Mike Connors, President<br>
         America Online Technologies</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“JavaScript is an exact match for Silicon Graphics suite of content creation and application development tools. This combination will benefit the industry by enabling the development of a richer set of interactive applications.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“JavaScript is an exact match for Silicon Graphics suite of content creation and application development tools. This combination will benefit the industry by enabling the development of a richer set of interactive applications.”</em><br><br>
         Tom Jermoluk, President and COO<br>
         Silicon Graphics</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“AT&T’s support for JavaScript is more than support for cool technology — it is support for an open standards process. Open standards are and will be as important to the success of the Internet as open connectivity.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“AT&T’s support for JavaScript is more than support for cool technology — it is support for an open standards process. Open standards are and will be as important to the success of the Internet as open connectivity.”</em><br><br>
         Tom Evslin, Vice President, Gateway Services<br>
         AT&T</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“JavaScript will allow us to easily create personalized applets for the Excite service. These applets, combined with the rich functionality of the Excite service, will integrate more fully into the users experience as they explore and navigate the Internet.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“JavaScript will allow us to easily create personalized applets for the Excite service. These applets, combined with the rich functionality of the Excite service, will integrate more fully into the users experience as they explore and navigate the Internet.”</em><br><br>
         Graham Spencer, Chief Technology Officer<br>
         Architext Software</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“JavaScript and Java represent important steps in the evolution of the Internet and Intranets for business computing. JavaScript allows Internet applications to easily connect to production databases such as CA-OpenIngres..”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“JavaScript and Java represent important steps in the evolution of the Internet and Intranets for business computing. JavaScript allows Internet applications to easily connect to production databases such as CA-OpenIngres..”</em><br><br>
         Nancy Li, Executive Vice President and CTO<br>
         Computer Associates</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“Tools like JavaScript will unleash a new wave of creativity and transform the Internet in ways no one can predict. JavaScript and other developments will demand increased system performance..”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“Tools like JavaScript will unleash a new wave of creativity and transform the Internet in ways no one can predict. JavaScript and other developments will demand increased system performance..”</em><br><br>
         Rose Ann Giordano, Vice President, Internet Business Group<br>
         Digital Equipment Corporation</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“JavaScript will benefit users by enabling live online applications. These applications need a powerful database engine for content management. [..]. By partnering with Netscape, we are bringing the best in online database and live, interactive technology to web users.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“JavaScript will benefit users by enabling live online applications. These applications need a powerful database engine for content management. [..]. By partnering with Netscape, we are bringing the best in online database and live, interactive technology to web users.”</em><br><br>
         Phil White, Chairman and CEO<br>
         Informix Software</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“SCO looks forward to supporting the JavaScript language on both our OpenServer and UnixWare product lines. JavaScript will enable developers to create substantially more stimulating and interactive web-based applications than ever before, giving them the edge they need to compete for the attention of the increasingly sophisticated population of Internet users.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“SCO looks forward to supporting the JavaScript language on both our OpenServer and UnixWare product lines. JavaScript will enable developers to create substantially more stimulating and interactive web-based applications than ever before, giving them the edge they need to compete for the attention of the increasingly sophisticated population of Internet users.”</em><br><br>
         Richard Treadway, Vice President, Layered Products<br>
         SCO</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“We plan to integrate our automatic document indexing and abstracting technology to leverage the power and functionality of JavaScript. The power and use of our technologies greatly enhances the server and its delivery of timely and valuable documents for web clients.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“We plan to integrate our automatic document indexing and abstracting technology to leverage the power and functionality of JavaScript. The power and use of our technologies greatly enhances the server and its delivery of timely and valuable documents for web clients.”</em><br><br>
         Robert Griggs, Vice President, Sales and Marketing<br>
         Iconovex Corporation</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“The creation of a general, standard scripting language for Java development will accelerate adoption of this new, exciting technology for delivering dynamic, live content to the consumer. Metrowerks will support JavaScript as part of our effort to deliver tools for Java as the programming platform of choice for new Internet development.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“The creation of a general, standard scripting language for Java development will accelerate adoption of this new, exciting technology for delivering dynamic, live content to the consumer. Metrowerks will support JavaScript as part of our effort to deliver tools for Java as the programming platform of choice for new Internet development.”</em><br><br>
         Greg Galanos, President and CEO<br>
         Metrowerks, Inc.</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“JavaScript empowers developers to create a powerful new class of multimedia rich applications in a platform-independent development environment.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“JavaScript empowers developers to create a powerful new class of multimedia rich applications in a platform-independent development environment.”</em><br><br>
         Dr. Michael Stonebraker, Founder and Chief Technology Officer<br>
         Illustra Information Technologies</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“Java is tremendously interesting to Verity as a powerful tool to provide dynamic display capabilities and client-side manipulation of results from our Search and Agent platforms. Configurability is a key strength of Verity servers, and the availability of JavaScript provides an ideal tool for non-programmers to harness the power of Java objects to customize the look and feel of their Verity applications.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“Java is tremendously interesting to Verity as a powerful tool to provide dynamic display capabilities and client-side manipulation of results from our Search and Agent platforms. Configurability is a key strength of Verity servers, and the availability of JavaScript provides an ideal tool for non-programmers to harness the power of Java objects to customize the look and feel of their Verity applications.”</em><br><br>
         Steve Zocchi, Director, Internet Marketing<br>
         Verity</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“Paper Software plans to use JavaScript as the glue which lets our development partners couple Java, plug-ins, and Paper’s multi-dimensional VRML user interfaces within a distributed, online application.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“Paper Software plans to use JavaScript as the glue which lets our development partners couple Java, plug-ins, and Paper’s multi-dimensional VRML user interfaces within a distributed, online application.”</em><br><br>
         Mike McCue, Chief Executive Officer<br>
         Paper Software</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“The Java and JavaScript languages will serve an important role in allowing Internet applications to take advantage of enterprise client/server computing. Sybase will enable our customers to utilize these languages as one of several ways to provide Internet access to the entire Sybase architecture in a high performance, customer-centric, safe environment.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“The Java and JavaScript languages will serve an important role in allowing Internet applications to take advantage of enterprise client/server computing. Sybase will enable our customers to utilize these languages as one of several ways to provide Internet access to the entire Sybase architecture in a high performance, customer-centric, safe environment.”</em><br><br>
         Mitchell Kertzman, Executive Vice President and CEO<br>
         Sybase’s Powersoft Division</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“Intuit will take advantage of JavaScript and Netscape’s authoring and application development tools to create compelling online financial services. Netscape’s open, cross-platform environment allows Intuit to efficiently develop and deploy online applications.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“Intuit will take advantage of JavaScript and Netscape’s authoring and application development tools to create compelling online financial services. Netscape’s open, cross-platform environment allows Intuit to efficiently develop and deploy online applications.”</em><br><br>
         Bill Harris, Executive Vice President<br>
         Intuit</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“JavaScript is a perfect complement to the software Precept is developing to let the Internet and corporate Intranets effectively handle real-time multimedia traffic. By serving as a means to integrate our products into web solutions, JavaScript will enable a wide range of web-based software to take advantage of real-time audio and video.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“JavaScript is a perfect complement to the software Precept is developing to let the Internet and corporate Intranets effectively handle real-time multimedia traffic. By serving as a means to integrate our products into web solutions, JavaScript will enable a wide range of web-based software to take advantage of real-time audio and video.”</em><br><br>
         Judy Estrin<br>
         Precept Software</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“The client-server, multi-vendor, cross-platform nature of JavaScript is a natural fit with the Vermeer FrontPage web authoring system. Tracking innovative, enabling Web technologies is an important priority for Vermeer, and we are moving quickly to incorporate the JavaScript language into Front Page and future products.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“The client-server, multi-vendor, cross-platform nature of JavaScript is a natural fit with the Vermeer FrontPage web authoring system. Tracking innovative, enabling Web technologies is an important priority for Vermeer, and we are moving quickly to incorporate the JavaScript language into Front Page and future products.”</em><br><br>
         John R. Mandle, Chief Executive Officer<br>
         Vermeer Technologies</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin-bottom: 10px;"><em>“Spider will integrate open and emerging Internet standards such as JavaScript into our product offering. Spider is committed to providing the most advanced solution for visual development and high performance deployment of commercial Web/database applications.”</em><br><br>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666; margin: 30px 0;"><em>“Spider will integrate open and emerging Internet standards such as JavaScript into our product offering. Spider is committed to providing the most advanced solution for visual development and high performance deployment of commercial Web/database applications.”</em><br><br>
         Zack Rinat, President and CEO<br>
         Spider Technologies</p>
 
