--- a/site/javascript-25-years-1995.html
+++ b/site/javascript-25-years-1995.html
@@ -141,7 +141,7 @@
 
         <p>All of the above comments from the early days of JavaScript are now 25 years old. How well do you think they’ve aged? 😅</p>
 
-        <p>Originally published at <a href="https://medium.com/dailyjs/heres-what-people-in-tech-had-to-say-about-javascript-when-it-debuted-in-1995-a4b81dc05b71">DailyJS</a></p>
+        <p><em>Originally published at <a href="https://medium.com/dailyjs/heres-what-people-in-tech-had-to-say-about-javascript-when-it-debuted-in-1995-a4b81dc05b71">DailyJS</a></em>.</p>
 
         <hr class="article_end">
 
