--- a/site/react-top-10-2020.html
+++ b/site/react-top-10-2020.html
@@ -34,11 +34,11 @@
 
       <div class="content">
 
-        <p>As one of the curators on <a href="https://react.statuscode.com">React Status</a> (a weekly email rounding up the latest React news, tutorials, and tools), at the end of each year I like to reflect back on the most popular links from the past tweleve months.</p>
+        <p>As one of the curators on <a href="https://react.statuscode.com">React Status</a> (a weekly email rounding up the latest React news, tutorials, and tools), at the end of each year I like to reflect back on the most popular links from the past twelve months.</p>
 
-        <p>So, without further ado, here's a look at ten of the most clicked React links in 2020</p>
+        <p>So, without further ado, here's a look at ten of the most clicked React links in 2020.</p>
 
-        <h1>The top ten React highlights of 2020:</h1>
+        <h1>⚛️ The top ten React highlights of 2020:</h1>
 
         <p><strong><a href="https://www.robinwieruch.de/react-libraries">The Key React Libraries to Use in 2020</a></strong></p>
 
