Updated copy to qualify data source.

--- a/site/react-top-10-2020.html
+++ b/site/react-top-10-2020.html
@@ -34,9 +34,9 @@
 
       <div class="content">
 
-        <p>As one of the curators on <a href="https://react.statuscode.com">React Status</a> (a weekly email rounding up the latest React news, tutorials, and tools), at the end of each year I like to reflect back on the most popular links from the past twelve months.</p>
+        <p>As one of the curators on <a href="https://react.statuscode.com">React Status</a> (<em>a weekly email rounding up the latest React news, tutorials, and tools</em>), at the end of each year I like to reflect back on the most popular links from the past twelve months.</p>
 
-        <p>So, without further ado, here's a look at ten of the most clicked React links in 2020.</p>
+        <p>So, without further ado, here's a look at ten of the most popular React links in 2020 —<em>as determined by readers of React Status</em>.</p>
 
         <h1>⚛️ The top ten React highlights of 2020:</h1>
 
