--- a/site/react-in-2020.html
+++ b/site/react-in-2020.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="/favicon.png" type="image/png" />
 
   <!-- Things to change -->
-  <title>React in 2020</title>
+  <title>React in 2020: Month-by-Month</title>
   <meta name="description" content="A month-by-month rundown of what happened in the world of React this year." />
   <meta property="og:description" content="A month-by-month rundown of what happened in the world of React this year." />
   <meta property="og:title" content="React in 2020" />
@@ -59,7 +59,7 @@
       <h2>March</h2>
 
       <ul>
-        <li><a href="https://redwoodjs.com">RedwoodJS</a> started to pop up on our radar.</li>
+        <li><a href="https://redwoodjs.com">RedwoodJS</a> started to pop up on our radar. We expect to cover this a lot more in 2021.</li>
         <li>Coronavirus began to throw in-person React events into disarray.</li>
       </ul>
 
@@ -67,7 +67,7 @@
 
       <ul>
         <li><a href="https://github.com/preactjs/preact/releases/tag/10.4.0">Preact 10.4.0</a> was released.</li>
-        <li>ZEIT <a href="https://vercel.com/blog/zeit-is-now-vercel">rebranded as Vercel</a>.</li>
+        <li>ZEIT <a href="https://vercel.com/blog/zeit-is-now-vercel">rebranded as Vercel</a>. They've since continued to grow and raise more money.</li>
       </ul>
 
       <h2>May</h2>
@@ -128,6 +128,7 @@
 
       <ul>
         <li>The <a href="https://react.christmas/2020">React Christmas advent calendar</a> began again.</li>
+        <li><a href="https://twitter.com/tannerlinsley/status/1338498989918998532?s=21">React Query 3.0</a> was released.</li>
       </ul>
 
         <hr class="article_end">
