--- a/site/react-top-10-2020.html
+++ b/site/react-top-10-2020.html
@@ -7,13 +7,13 @@
   <link rel="icon" href="/favicon.png" type="image/png" />
 
   <!-- Things to change -->
-  <title>The top React links of 2020</title>
+  <title>Our readers' React links of 2020</title>
   <meta name="description" content="Looking back at what proved popular in the React world this year." />
   <meta property="og:description" content="Looking back at what proved popular in the React world this year." />
-  <meta property="og:title" content="The top React links of 2020" />
+  <meta property="og:title" content="Our readers' top React links of 2020" />
   <meta property="og:image" content="https://superhighway.dev/images/v1608034473/sxktdtdzkdbyn5myqqol.png" />
   <meta property="og:url" content="https://superhighway.dev/react-top-10-2020" />
-  <meta name="twitter:site" content="@SUPERHlGHWAY" />
+  <meta name="twitter:site" content="@javascriptdaily" />
 
   <!-- Things that can stay fixed -->
   <meta property="og:site_name" content="Superhighway" />
@@ -27,7 +27,7 @@
       <div style="background: url(https://superhighway.dev/images/v1608034473/sxktdtdzkdbyn5myqqol.png), #369cee; height: 25vw; background-size: cover; background-position: center;"></div>
       <header>
         <div class="sub">Year in Review</div>
-        <h1>The top React links of 2020</h1>
+        <h1>Our readers' top React links of 2020</h1>
         <h2>Looking back at what proved popular in the React world this year.</h2>
         <p class="byline">by <a href="https://twitter.com/peterc">Peter Cooper</a>&nbsp;&middot;&nbsp;December 17, 2020</p>
       </header>
