--- a/site/react-in-2020.html
+++ b/site/react-in-2020.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="React in 2020" />
   <meta property="og:image" content="https://superhighway.dev/images/v1608208836/dwd0jhlb1p0bwoqasyv5.jpg" />
   <meta property="og:url" content="https://superhighway.dev/react-top-10-2020" />
-  <meta name="twitter:site" content="@SUPERHlGHWAY" />
+  <meta name="twitter:site" content="@javascriptdaily" />
 
   <!-- Things that can stay fixed -->
   <meta property="og:site_name" content="Superhighway" />
