--- a/site/middy-node-interview.html
+++ b/site/middy-node-interview.html
@@ -73,7 +73,7 @@
 
 <p>Unlike others, Middy also focuses on use cases like triggering Lambda from other services such as SQS and S3 and making the developer experience in these less used cases easier.</p>
 
-        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>The <a href="https://github.com/middyjs/middy">Middy repo can be found here</a>. You can also find both <a href="https://github.com/willfarrell">Will</a> and <a href="https://github.com/lmammino">Luciano</a> on GitHub too.</em>.</p>
+        <p style="border-left: 4px solid #E2E8F0; padding-left: 20px; color: #666;"><em>The <a href="https://github.com/middyjs/middy">Middy repo can be found here</a>. You can also find both <a href="https://github.com/willfarrell">Will</a> and <a href="https://github.com/lmammino">Luciano</a> on GitHub too</em>.</p>
 
         <hr class="article_end">
 
