--- a/site/middy-node-interview.html
+++ b/site/middy-node-interview.html
@@ -37,7 +37,7 @@
 
         <p><a href="https://middy.js.org">Middy</a> is a simple middleware engine that allows you to simplify your AWS Lambda code when using Node.js.</p>
 
-        <p>We caught up with the project's creator Luciano Mammino and maintainer Will Farrell to ask them a few questions. They stared by explaning how the project came to be:</p>
+        <p>We caught up with the project's creator Luciano Mammino and maintainer Will Farrell to ask them a few questions. <strong>They stared by explaning how the project came to be:</strong></p>
 
         <p>The idea of Middy started in 2016 when Luciano was working with a company building everything on AWS using serverless technologies. We were among the first early adopters of these technologies and AWS invited us to speak at AWS Summit 2017 in London and present our serverless use cases.</p>
 
